--- a/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -272,9 +272,10 @@ BP_Door_C=
 LastLevel=/Game/Levels/Level_Gym
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 OpenAssetsAtExit=/Game/Player/BP_PlayerController.BP_PlayerController
+OpenAssetsAtExit=/Game/LDis/Triggers/BP_Door.BP_Door
 OpenAssetsAtExit=/Game/LDis/Triggers/BP_CollectibleKey.BP_CollectibleKey
 OpenAssetsAtExit=/Game/LDis/Triggers/BP_HealthZone.BP_HealthZone
 
@@ -1261,7 +1262,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Player
+ContentBrowserTab1.SelectedPaths=/Game/LDis/Triggers
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1294,6 +1295,9 @@ MRUItem12=/Game/_Core/BP_GameMode
 /Game/LDis/Triggers/_Base/BP_TriggerBase.BP_TriggerBase=1
 /Game/LDis/Triggers/_Base/BP_TriggerPlayerBase.BP_TriggerPlayerBase=1
 /Game/LDis/Triggers/_Data/Materials/M_CollectibleKey.M_CollectibleKey=1
+/Game/LDis/Triggers/BP_Door.BP_Door=1
+/Game/LDis/Triggers/BP_CollectibleKey.BP_CollectibleKey=1
+/Game/LDis/Triggers/BP_HealthZone.BP_HealthZone=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1342,7 +1346,7 @@ RecentlyPlaced=/Game/LDis/Triggers/_Base/BP_TriggerBase.BP_TriggerBase;
 RecentlyPlaced=/Game/Player/BP_Player.BP_Player;
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
+ScreenPosition=X=642.000 Y=-1.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -2250,6 +2254,8 @@ Voice.TimeStamp=2021.11.30-15.21.24
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2021.11.30-15.20.04
 MovieSceneCapture.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2021.11.30-15.19.56
+MaterialEditor.LastCompileMethod=Unknown
 
 [MessageLog]
 LastLogListing=PIE
