--- a/TP/TP_LattardMathis/Config/DefaultInput.ini
+++ b/TP/TP_LattardMathis/Config/DefaultInput.ini
@@ -79,6 +79,8 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="GravityGun_Grab",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="GravityGun_Throw",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +AxisMappings=(AxisName="Move_Forward",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="Move_Forward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Move_Right",Scale=1.000000,Key=D)
