--- a/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -255,7 +255,7 @@ UpdateAiming_8=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.Textur
 UpdateAiming=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,
 EdGraph=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 MovementComponent=
-BP_Sky_Sphere_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,StaticMeshActor.Rendering.TextureStreaming,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,
+BP_Sky_Sphere_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,StaticMeshActor.Rendering.TextureStreaming,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 BP_TriggerBase_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,
 BP_TriggerPlayerBase_C=
@@ -271,16 +271,19 @@ BPC_GravityGun_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.Text
 BP_GravityTargetBase_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 ActivatePhysics_10=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 ActivatePhysics=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
+BP_Explosion_C=
+BP_ExplosiveBarrel_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 
 [EditorStartup]
 LastLevel=/Game/Levels/Level_Gym
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Player/BP_PlayerController.BP_PlayerController
-OpenAssetsAtExit=/Game/Player/BPC_GravityGun.BPC_GravityGun
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
+CleanShutdown=False
 OpenAssetsAtExit=/Game/LDis/GravityTargets/_Base/BP_GravityTargetBase.BP_GravityTargetBase
+OpenAssetsAtExit=/Game/Interfaces/IDestructible.IDestructible
+OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/LDis/GravityTargets/BP_Explosion.BP_Explosion
+OpenAssetsAtExit=/Game/LDis/GravityTargets/BP_ExplosiveBarrel.BP_ExplosiveBarrel
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -1095,6 +1098,55 @@ SceneComponent.AssetUserData=True
 SceneComponent.LOD=True
 SceneComponent.Physics=True
 BPC_GravityGun_C.Gravity Gun=True
+BP_GravityTargetBase_C.Default=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Thumbnail=True
+BP_Explosion_C.Tick=True
+BP_Explosion_C.Replication=True
+BP_Explosion_C.Rendering=True
+BP_Explosion_C.Collision=True
+BP_Explosion_C.Actor=True
+BP_Explosion_C.Input=True
+BP_Explosion_C.WorldPartition=True
+BP_Explosion_C.HLOD=True
+BP_Explosion_C.TransformCommon=True
+BP_Explosion_C.Explosion=True
+BP_ExplosiveBarrel_C.Gravity Target=True
+BP_ExplosiveBarrel_C.Tick=True
+BP_ExplosiveBarrel_C.GravityTarget=True
+BP_ExplosiveBarrel_C.Replication=True
+BP_ExplosiveBarrel_C.Rendering=True
+BP_ExplosiveBarrel_C.Collision=True
+BP_ExplosiveBarrel_C.Actor=True
+BP_ExplosiveBarrel_C.Input=True
+BP_ExplosiveBarrel_C.WorldPartition=True
+BP_ExplosiveBarrel_C.HLOD=True
+BP_ExplosiveBarrel_C.TransformCommon=True
+BP_ExplosiveBarrel_C.Explosive Barrel=True
+NewLevelInstanceParams.Default=True
+NewLevelInstanceParams.Pivot=True
+NiagaraScript.Script=True
+NiagaraScript.NiagaraScript_InputParams=True
+NiagaraScript.NiagaraScript_OutputParams=True
+NiagaraComponent.Variable=True
+NiagaraComponent.TransformCommon=True
+NiagaraComponent.Sockets=True
+NiagaraComponent.Niagara=True
+NiagaraComponent.Parameters=True
+NiagaraComponent.ComponentTick=True
+NiagaraComponent.Attachment=True
+NiagaraComponent.Compilation=True
+NiagaraComponent.NiagaraComponent_Parameters=True
+NiagaraComponent.Lighting=True
+NiagaraComponent.Rendering=True
+NiagaraComponent.Navigation=True
+NiagaraComponent.Tags=True
+NiagaraComponent.ComponentReplication=True
+NiagaraComponent.Activation=True
+NiagaraComponent.Cooking=True
+NiagaraComponent.Events=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1204,9 +1256,9 @@ PersonaOptions="\"Object.Preview Scene.Preview Scene|AdditionalMesh\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AutomationTestSettings="\"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.MiscAutomationSetups.TestLevelFolders\" "
-BP_Player_C="\"Object.Player.Player| CachedPlayer\" \"Object.Player.Player|Cached Player\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Character="\"Object.Player.Player| CachedPlayer\" \"Object.Player.Player|Cached Player\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Pawn="\"Object.Player.Player| CachedPlayer\" \"Object.Player.Player|Cached Player\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+BP_Player_C=
+Character=
+Pawn=
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Console.ConsoleKeys\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
 SceneComponent=
@@ -1245,14 +1297,23 @@ NiagaraSettings="\"Object.Renderer.ComponentRendererWarningsPerClass\" "
 NiagaraEditorSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14].Input\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent=
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" "
-BP_GravityTargetBase_C=
+BP_GravityTargetBase_C="\"Object.ExplosionDamage\" "
 BPC_GravityGun_C=
-ActivatePhysics_10="\"Struct.L_colProfileGrab\" "
+ActivatePhysics_10="\"Struct.L_colProfileDefault\" "
 ActivatePhysics=
+PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[1]\" \"Object.Lightmass.LightmassSettings\" "
+Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[1]\" \"Object.Lightmass.LightmassSettings\" "
+MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[1]\" \"Object.Lightmass.LightmassSettings\" "
+MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
+MaterialExpressionParameter="\"Object.DefaultValue\" "
+MaterialExpression="\"Object.DefaultValue\" "
+BP_Explosion_C="\"Object.Lifespan\" "
+MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
+BP_ExplosiveBarrel_C="\"Object.ExplosionDamage\" "
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1306,22 +1367,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LDis/GravityTargets/_Base/BP_GravityTargetBase
-MRUItem1=/Game/LDis/GravityTargets/_Enums/EGravityTargetsState
-MRUItem2=/Game/Player/BP_Player
-MRUItem3=/Game/Player/BPC_GravityGun
-MRUItem4=/Game/Player/BP_PlayerController
-MRUItem5=/Game/LDis/Triggers/BP_HealthZone
-MRUItem6=/Game/LDis/BP_Door
-MRUItem7=/Game/LDis/Triggers/BP_CollectibleKey
-MRUItem8=/Game/LDis/Triggers/_Data/Materials/M_CollectibleKey
-MRUItem9=/Game/LDis/Triggers/_Data/Materials/M_HealthZone_Red
-MRUItem10=/Game/LDis/Triggers/_Data/Materials/M_HealthZone_Green
-MRUItem11=/Game/LDis/Triggers/_Base/BP_TriggerPlayerBase
-MRUItem12=/Game/LDis/Triggers/_Base/BP_TriggerBase
-MRUItem13=/Game/Player/_Enums/EPlayerState
-MRUItem14=/Game/Player/_Enums/Enumeration
-MRUItem15=/Game/_Core/BP_GameMode
+MRUItem0=/Game/LDis/GravityTargets/NewNiagaraSystem
+MRUItem1=/Game/LDis/GravityTargets/_Data/Materials/M_Explosion
+MRUItem2=/Game/LDis/GravityTargets/NewNiagaraScript
+MRUItem3=/Game/LDis/GravityTargets/BP_ExplosiveBarrel
+MRUItem4=/Game/LDis/GravityTargets/_Data/Materials/M_ExplosionBarrel
+MRUItem5=/Game/LDis/GravityTargets/_Data/Materials/M_ExplosionBqrrel
+MRUItem6=/Game/LDis/GravityTargets/BP_Explosion
+MRUItem7=/Game/LDis/Triggers/BP_HealthZone
+MRUItem8=/Game/Player/BP_Player
+MRUItem9=/Game/Interfaces/IDestructible
+MRUItem10=/Game/LDis/GravityTargets/_Base/BP_GravityTargetBase
+MRUItem11=/Game/LDis/GravityTargets/_Enums/EGravityTargetsState
+MRUItem12=/Game/Player/BPC_GravityGun
+MRUItem13=/Game/Player/BP_PlayerController
+MRUItem14=/Game/LDis/BP_Door
+MRUItem15=/Game/LDis/Triggers/BP_CollectibleKey
+MRUItem16=/Game/LDis/Triggers/_Data/Materials/M_CollectibleKey
+MRUItem17=/Game/LDis/Triggers/_Data/Materials/M_HealthZone_Red
+MRUItem18=/Game/LDis/Triggers/_Data/Materials/M_HealthZone_Green
+MRUItem19=/Game/LDis/Triggers/_Base/BP_TriggerPlayerBase
 
 [AssetEditorToolkitTabLocation]
 /Game/_Core/BP_GameMode.BP_GameMode=1
@@ -1340,6 +1405,9 @@ MRUItem15=/Game/_Core/BP_GameMode
 /Game/LDis/GravityTargets/_Enums/EGravityTargetsState.EGravityTargetsState=1
 /Game/LDis/GravityTargets/_Base/BP_GravityTargetBase.BP_GravityTargetBase=1
 /Game/Player/BPC_GravityGun.BPC_GravityGun=1
+/Game/LDis/GravityTargets/_Data/Materials/M_Explosion.M_Explosion=1
+/Game/LDis/GravityTargets/_Data/Materials/M_ExplosionBqrrel.M_ExplosionBqrrel=1
+/Game/LDis/GravityTargets/_Data/Materials/M_ExplosionBarrel.M_ExplosionBarrel=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1380,6 +1448,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/LDis/GravityTargets/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
+RecentlyPlaced=/Game/LDis/GravityTargets/BP_Explosion.BP_Explosion;
 RecentlyPlaced=/Game/LDis/GravityTargets/_Base/BP_GravityTargetBase.BP_GravityTargetBase;
 RecentlyPlaced=/Game/LDis/Triggers/BP_HealthZone.BP_HealthZone;
 RecentlyPlaced=/Game/LDis/Triggers/BP_Door.BP_Door;
@@ -2307,7 +2377,6 @@ LastLogListing=PIE
 bWheelMode=False
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
