--- a/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -268,22 +268,17 @@ ApplyZoneEffect=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.Textu
 BP_CollectibleKey_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,
 BP_Door_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 BPC_GravityGun_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
-BP_GravityTargetBase_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
+BP_GravityTargetBase_C=
 ActivatePhysics_10=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 ActivatePhysics=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 BP_Explosion_C=
-BP_ExplosiveBarrel_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
+BP_ExplosiveBarrel_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,StaticMeshActor.Rendering.TextureStreaming,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 
 [EditorStartup]
 LastLevel=/Game/Levels/Level_Gym
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/LDis/GravityTargets/_Base/BP_GravityTargetBase.BP_GravityTargetBase
-OpenAssetsAtExit=/Game/Interfaces/IDestructible.IDestructible
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/LDis/GravityTargets/BP_Explosion.BP_Explosion
-OpenAssetsAtExit=/Game/LDis/GravityTargets/BP_ExplosiveBarrel.BP_ExplosiveBarrel
+CleanShutdown=True
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -1147,6 +1142,18 @@ NiagaraComponent.ComponentReplication=True
 NiagaraComponent.Activation=True
 NiagaraComponent.Cooking=True
 NiagaraComponent.Events=True
+NiagaraEffectType.Scalability=True
+NiagaraEffectType.Performance=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1301,7 +1308,7 @@ PrimitiveComponent=
 StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" "
-BP_GravityTargetBase_C="\"Object.ExplosionDamage\" "
+BP_GravityTargetBase_C=
 BPC_GravityGun_C=
 ActivatePhysics_10="\"Struct.L_colProfileDefault\" "
 ActivatePhysics=
@@ -1313,7 +1320,7 @@ MaterialExpressionParameter="\"Object.DefaultValue\" "
 MaterialExpression="\"Object.DefaultValue\" "
 BP_Explosion_C="\"Object.Lifespan\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
-BP_ExplosiveBarrel_C="\"Object.ExplosionDamage\" "
+BP_ExplosiveBarrel_C=
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1359,7 +1366,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/LDis/GravityTargets/_Base
+ContentBrowserTab1.SelectedPaths=/Game/LDis/GravityTargets
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1367,26 +1374,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LDis/GravityTargets/NewNiagaraSystem
-MRUItem1=/Game/LDis/GravityTargets/_Data/Materials/M_Explosion
-MRUItem2=/Game/LDis/GravityTargets/NewNiagaraScript
-MRUItem3=/Game/LDis/GravityTargets/BP_ExplosiveBarrel
-MRUItem4=/Game/LDis/GravityTargets/_Data/Materials/M_ExplosionBarrel
-MRUItem5=/Game/LDis/GravityTargets/_Data/Materials/M_ExplosionBqrrel
-MRUItem6=/Game/LDis/GravityTargets/BP_Explosion
-MRUItem7=/Game/LDis/Triggers/BP_HealthZone
-MRUItem8=/Game/Player/BP_Player
-MRUItem9=/Game/Interfaces/IDestructible
-MRUItem10=/Game/LDis/GravityTargets/_Base/BP_GravityTargetBase
-MRUItem11=/Game/LDis/GravityTargets/_Enums/EGravityTargetsState
-MRUItem12=/Game/Player/BPC_GravityGun
-MRUItem13=/Game/Player/BP_PlayerController
-MRUItem14=/Game/LDis/BP_Door
-MRUItem15=/Game/LDis/Triggers/BP_CollectibleKey
-MRUItem16=/Game/LDis/Triggers/_Data/Materials/M_CollectibleKey
-MRUItem17=/Game/LDis/Triggers/_Data/Materials/M_HealthZone_Red
-MRUItem18=/Game/LDis/Triggers/_Data/Materials/M_HealthZone_Green
-MRUItem19=/Game/LDis/Triggers/_Base/BP_TriggerPlayerBase
+MRUItem0=/Niagara/DefaultAssets/S_Arrow
+MRUItem1=/Game/LDis/GravityTargets/NewNiagaraSystem
+MRUItem2=/Game/LDis/GravityTargets/NewNiagaraEffectType
+MRUItem3=/Game/LDis/GravityTargets/_Data/Materials/M_Explosion
+MRUItem4=/Game/LDis/GravityTargets/NewNiagaraScript
+MRUItem5=/Game/LDis/GravityTargets/BP_ExplosiveBarrel
+MRUItem6=/Game/LDis/GravityTargets/_Data/Materials/M_ExplosionBarrel
+MRUItem7=/Game/LDis/GravityTargets/_Data/Materials/M_ExplosionBqrrel
+MRUItem8=/Game/LDis/GravityTargets/BP_Explosion
+MRUItem9=/Game/LDis/Triggers/BP_HealthZone
+MRUItem10=/Game/Player/BP_Player
+MRUItem11=/Game/Interfaces/IDestructible
+MRUItem12=/Game/LDis/GravityTargets/_Base/BP_GravityTargetBase
+MRUItem13=/Game/LDis/GravityTargets/_Enums/EGravityTargetsState
+MRUItem14=/Game/Player/BPC_GravityGun
+MRUItem15=/Game/Player/BP_PlayerController
+MRUItem16=/Game/LDis/BP_Door
+MRUItem17=/Game/LDis/Triggers/BP_CollectibleKey
+MRUItem18=/Game/LDis/Triggers/_Data/Materials/M_CollectibleKey
+MRUItem19=/Game/LDis/Triggers/_Data/Materials/M_HealthZone_Red
 
 [AssetEditorToolkitTabLocation]
 /Game/_Core/BP_GameMode.BP_GameMode=1
@@ -1408,6 +1415,10 @@ MRUItem19=/Game/LDis/Triggers/_Base/BP_TriggerPlayerBase
 /Game/LDis/GravityTargets/_Data/Materials/M_Explosion.M_Explosion=1
 /Game/LDis/GravityTargets/_Data/Materials/M_ExplosionBqrrel.M_ExplosionBqrrel=1
 /Game/LDis/GravityTargets/_Data/Materials/M_ExplosionBarrel.M_ExplosionBarrel=1
+/Niagara/DefaultAssets/S_Arrow.S_Arrow=1
+/Game/Interfaces/IDestructible.IDestructible=1
+/Game/LDis/GravityTargets/BP_Explosion.BP_Explosion=1
+/Game/LDis/GravityTargets/BP_ExplosiveBarrel.BP_ExplosiveBarrel=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1459,7 +1470,7 @@ RecentlyPlaced=/Game/LDis/Triggers/_Base/BP_TriggerBase.BP_TriggerBase;
 RecentlyPlaced=/Game/Player/BP_Player.BP_Player;
 
 [RootWindow]
-ScreenPosition=X=317.000 Y=157.000
+ScreenPosition=X=361.000 Y=-8.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -2369,6 +2380,8 @@ MovieSceneCapture.TimeStamp=2021.11.30-15.20.04
 MovieSceneCapture.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2021.11.30-15.19.56
 MaterialEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2021.11.30-15.20.52
+SequencerWidgets.LastCompileMethod=Unknown
 
 [MessageLog]
 LastLogListing=PIE
