--- a/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -125,11 +125,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,VisualizeLumenScene=0,VisualizeLumenIndirectDiffuse=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,VisualizeLumenScene=0,VisualizeLumenIndirectDiffuse=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0",BufferVisualizationMode="",NaniteVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Levels/Level_03
-MRUItem1=/Game/Levels/Level_02
-MRUItem2=/Game/Levels/Level_01
-MRUItem3=/Game/Levels/Level_Gym
-MRUItem4=/Game/Levels/bootstrap
+MRUItem0=/Game/Levels/bootstrap
+MRUItem1=/Game/Levels/Level_01
+MRUItem2=/Game/Levels/Level_03
+MRUItem3=/Game/Levels/Level_02
+MRUItem4=/Game/Levels/Level_Gym
 MRUItem5=/Game/__StarterContent/Maps/Minimal_Default
 
 [DetailCustomWidgetExpansion]
@@ -278,14 +278,22 @@ ActivatePhysics=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.Textu
 BP_Explosion_C=
 BP_ExplosiveBarrel_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,StaticMeshActor.Rendering.TextureStreaming,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 BP_StickyPlatform_C=
-BP_GameFlowManager_C=
-WBP_GameFlowUI_C=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
+BP_GameFlowManager_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
+WBP_GameFlowUI_C=
+SetupEndUI_4=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
+SetupEndUI=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
+ToDoubleDigits_5=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
+ToDoubleDigits=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
+PlayerController=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 
 [EditorStartup]
-LastLevel=/Game/Levels/Level_03
+LastLevel=/Game/Levels/Bootstrap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/_Core/BP_GameFlowManager.BP_GameFlowManager
+OpenAssetsAtExit=/Game/_Core/_Widgets/WBP_GameFlowUI.WBP_GameFlowUI
+OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -1276,6 +1284,12 @@ WBP_GameFlowUI_C.Performance=True
 WBP_GameFlowUI_C.Clipping=True
 WBP_GameFlowUI_C.Navigation=True
 WBP_GameFlowUI_C.Localization=True
+BP_GameFlowManager_C.Default=True
+BP_GameFlowManager_C.Game Flow Manager =True
+WBP_GameFlowUI_C.Default=True
+WBP_GameFlowUI_C.Designer=True
+WBP_GameFlowUI_C.Layout=True
+K2Node_FormatText.Arguments=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1378,7 +1392,7 @@ SteamVREditorSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[1]\" \"Object.Lightmass.LightmassSettings\" "
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 LevelEditorPlaySettings="\"Object.Multiplayer Options.Multiplayer Options|Client\" \"Object.Multiplayer Options.Multiplayer Options|Server\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.Pow2GridIntervals\" \"Object.GridSnapping.DivisionsOf360RotGridSizes\" \"Object.Preview.PreviewMeshes\" "
 PersonaOptions="\"Object.Preview Scene.Preview Scene|AdditionalMesh\" "
@@ -1445,15 +1459,19 @@ MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 BP_ExplosiveBarrel_C=
 BP_GameFlowManager_C="\"Object.Levels\" "
 Image="\"Object.Appearance.Brush\" "
-Widget="\"Object.ColorComplete\" "
-Visual="\"Object.ColorComplete\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
-WBP_GameFlowUI_C="\"Object.ColorComplete\" "
-UserWidget="\"Object.ColorComplete\" "
+WBP_GameFlowUI_C=
+UserWidget=
+SetupEndUI_4="\"Struct.L_mainColor\" "
+SetupEndUI=
+ToDoubleDigits_5="\"Struct.L_integerString\" "
+ToDoubleDigits=
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1507,26 +1525,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/_Core/_Widgets/WBP_GameFlowUI
-MRUItem1=/Game/_Core/BP_StartPosition
-MRUItem2=/Game/_Core/BP_GameFlowManager
-MRUItem3=/Game/Levels/Level_03
-MRUItem4=/Game/Levels/Level_02
-MRUItem5=/Game/Levels/Level_01
-MRUItem6=/Game/Levels/Level_Gym
-MRUItem7=/Game/_Core/_Data/_Material/M_StartPosition
-MRUItem8=/Game/_Core/_Enums/EGameState
-MRUItem9=/Game/Levels/bootstrap
-MRUItem10=/Game/LDis/GravityTargets/BP_StickyPlatform
-MRUItem11=/Game/LDis/GravityTargets/_Data/Materials/M_StickyPlatform
-MRUItem12=/Niagara/DefaultAssets/S_Arrow
-MRUItem13=/Game/LDis/GravityTargets/NewNiagaraSystem
-MRUItem14=/Game/LDis/GravityTargets/NewNiagaraEffectType
-MRUItem15=/Game/LDis/GravityTargets/_Data/Materials/M_Explosion
-MRUItem16=/Game/LDis/GravityTargets/NewNiagaraScript
-MRUItem17=/Game/LDis/GravityTargets/BP_ExplosiveBarrel
-MRUItem18=/Game/LDis/GravityTargets/_Data/Materials/M_ExplosionBarrel
-MRUItem19=/Game/LDis/GravityTargets/_Data/Materials/M_ExplosionBqrrel
+MRUItem0=/Game/Levels/bootstrap
+MRUItem1=/Game/Player/BP_Player
+MRUItem2=/Game/_Core/_Widgets/WBP_GameFlowUI
+MRUItem3=/Game/_Core/BP_GameFlowManager
+MRUItem4=/Game/Levels/Level_01
+MRUItem5=/Game/_Core/BP_StartPosition
+MRUItem6=/Game/Levels/Level_03
+MRUItem7=/Game/Levels/Level_02
+MRUItem8=/Game/Levels/Level_Gym
+MRUItem9=/Game/_Core/_Data/_Material/M_StartPosition
+MRUItem10=/Game/_Core/_Enums/EGameState
+MRUItem11=/Game/LDis/GravityTargets/BP_StickyPlatform
+MRUItem12=/Game/LDis/GravityTargets/_Data/Materials/M_StickyPlatform
+MRUItem13=/Niagara/DefaultAssets/S_Arrow
+MRUItem14=/Game/LDis/GravityTargets/NewNiagaraSystem
+MRUItem15=/Game/LDis/GravityTargets/NewNiagaraEffectType
+MRUItem16=/Game/LDis/GravityTargets/_Data/Materials/M_Explosion
+MRUItem17=/Game/LDis/GravityTargets/NewNiagaraScript
+MRUItem18=/Game/LDis/GravityTargets/BP_ExplosiveBarrel
+MRUItem19=/Game/LDis/GravityTargets/_Data/Materials/M_ExplosionBarrel
 
 [AssetEditorToolkitTabLocation]
 /Game/_Core/BP_GameMode.BP_GameMode=1
