--- a/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -253,7 +253,7 @@ PropertyWrapper=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.Textu
 K2Node_VariableGet=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 BP_PlayerController_C=
 K2Node_VariableSet=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
-SceneComponent=
+SceneComponent=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 SkeletalMeshComponent=
 UpdateAiming_8=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,
 UpdateAiming=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,
@@ -278,7 +278,7 @@ ActivatePhysics=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.Textu
 BP_Explosion_C=
 BP_ExplosiveBarrel_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,StaticMeshActor.Rendering.TextureStreaming,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 BP_StickyPlatform_C=
-BP_GameFlowManager_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
+BP_GameFlowManager_C=
 WBP_GameFlowUI_C=
 SetupEndUI_4=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 SetupEndUI=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
@@ -1290,6 +1290,9 @@ WBP_GameFlowUI_C.Default=True
 WBP_GameFlowUI_C.Designer=True
 WBP_GameFlowUI_C.Layout=True
 K2Node_FormatText.Arguments=True
+BP_GameFlowManager_C.LOD=True
+BP_GameFlowManager_C.Cooking=True
+BP_GameFlowManager_C.DataLayers=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1392,7 +1395,7 @@ SteamVREditorSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
+Object=
 LevelEditorPlaySettings="\"Object.Multiplayer Options.Multiplayer Options|Client\" \"Object.Multiplayer Options.Multiplayer Options|Server\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.Pow2GridIntervals\" \"Object.GridSnapping.DivisionsOf360RotGridSizes\" \"Object.Preview.PreviewMeshes\" "
 PersonaOptions="\"Object.Preview Scene.Preview Scene|AdditionalMesh\" "
